MMRDS-1350 Fix an issue where last updated info was not wrapping correct

--- a/source-code/mmria/mmria-server/wwwroot/styles/mmria-custom.css
+++ b/source-code/mmria/mmria-server/wwwroot/styles/mmria-custom.css
@@ -1344,7 +1344,7 @@ button.link {
 .construct__info span {
   padding-left: 5px;
   position: absolute;
-  width: 100%;
+  width: 50%;
 }
 
 /*
